# embedded_system

./: README.md  testwork.tar.bz2
src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
src/autom4te.cache/: output.0  traces.0  traces.1
src/driver/: .globalvar.ko.cmd  .globalvar.mod.o.cmd  .globalvar.o.cmd  .globalvar_array.ko.cmd  .globalvar_array.mod.o.cmd  .globalvar_array.o.cmd  Makefile  a.out  globalvar.c  globalvar.ko  globalvar.mod.c  globalvar_array.c  globalvar_array.ko  globalvar_array.mod.c  modules.order  test  test.c
src/driver/.tmp_versions/: globalvar.mod  globalvar_array.mod
src/fifo/: Makefile  Makefile.am  Makefile.in  arm_fifo_read  fifo_read  fifo_read.c  fifo_write  fifo_write.c  pipetest_second  pipetest_second.c  pipetest_simple  pipetest_simple.c
src/fifo/.deps/: fifo_read.Po  fifo_write.Po  pipetest_simple.Po
src/mmap/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  mmap_read  mmap_read.c  mmap_write  mmap_write.c
src/mmap/.deps/: mmap_read.Po  mmap_write.Po
src/poll/: .char_dev.ko.cmd  .char_dev.mod.o.cmd  .char_dev.o.cmd  .char_dev_new.ko.cmd  .char_dev_new.mod.o.cmd  .char_dev_new.o.cmd  Makefile  a.out  char_dev.c  char_dev.ko  char_dev.mod.c  char_dev_new.c  char_dev_new.ko  char_dev_new.mod.c  modules.order  test  test.c
src/systemv/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  testread  testread.c  testwrite  testwrite.c
src/unix_socket/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  arm_server  client  client.c  server  server.c
(+48 files in other folders)
