sbin_PROGRAMS = pipetest_simple pipetest_second arm_pipetest_simple arm_pipetest_second fifo_read fifo_write arm_fifo_read arm_fifo_write

pipetest_simple_SOURCES = pipetest_simple.c 
pipetest_second_SOURCES = pipetest_simple.c 

arm_pipetest_simple_SOURCES = pipetest_simple.c 
arm_pipetest_second_SOURCES = pipetest_simple.c 

fifo_read_SOURCES = fifo_read.c
fifo_write_SOURCES = fifo_write.c

arm_fifo_read_SOURCES = fifo_read.c
arm_fifo_write_SOURCES = fifo_write.c
